--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1{
 ul{
     list-style: none;
     padding: 10px;
-    margin: 20px;
+    margin: 1rem;
     text-align: center;
 }
 .todo{
@@ -74,4 +74,12 @@ ul{
 .completed {
     text-decoration: line-through;
     opacity: 0.5;
+}
+.filter-todo{
+    margin: 2rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+    background: white;
+    text-align: center;
+    border: none;
 }
